--- a/NaikPete--Kelompok-07-frontend/flutter_pete/pubspec.yaml
+++ b/NaikPete--Kelompok-07-frontend/flutter_pete/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.0.0
   image_picker: ^1.0.0
   file_picker: ^5.0.0
+  flutter_secure_storage: ^5.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
