--- a/NaikPete--Kelompok-07-frontend/flutter_pete/pubspec.yaml
+++ b/NaikPete--Kelompok-07-frontend/flutter_pete/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^1.0.0
   file_picker: ^5.0.0
   flutter_secure_storage: ^5.0.2
+  image_picker_web: ^3.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
